# genai-learning-assistant

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
deployment/: Dockerfile  aws-ecs-task-definition.json  cloudformation.yml  docker-compose.yml  prometheus.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md
src/: __init__.py  main.py
src/agents/: __init__.py  learning_agent.py  strand_agent.py
src/api/: __init__.py  models.py  routes.py
src/config/: __init__.py  settings.py
src/services/: __init__.py  bedrock_service.py
src/utils/: __init__.py  exceptions.py  logger.py
tests/: __init__.py  conftest.py  test_agents.py  test_api.py
